syntax = "proto3";

option csharp_namespace = "Environment.Management";

package tenant;

service Tenant {
  rpc UpsertTenant(UpsertTenantRequest) returns (TenantResponse);
}

message UpsertTenantRequest {
  string id = 1;
  string url = 2;
  repeated TenantFeature features = 3;
}

message TenantFeature {
  string id = 1;
  string name = 2;
}

message TenantResponse {
  string id = 1;
  string url = 2;
  repeated TenantFeature features = 3;
}